<resources>
    <string name="app_name">EsercizioDevelhope</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titolo_fragment">Esercizio Develhope</string>
    <string name="subtitle_fragment">Esercizio N1 </string>
    <string name="button1">Button 1</string>
    <string name="button2">Button 2</string>
    <string name="button3">Button 3</string>
    <string name="button_text1">Hai premuto il bottone 1</string>
    <string name="button_text2">Hai premuto il bottone 2</string>
    <string name="button_text3">Hai premuto il bottone 3</string>
    <string name="settings">Impostazioni</string>
    <string name="contacts">Contatti</string>
    <string name="settingsfragmenttitle">Impostazioni</string>
    <string name="mantieni_impostazioni">Mantieni Impostazioni</string>
    <string name="outputtextview">outputtextview</string>
    <string name="disattiva_notifiche">Disattiva Notifiche</string>
    <string name="risparmio_energetico">Risparmio energetico</string>
</resources>